--- a/_posts/2020-07-03-boa-release-09.md
+++ b/_posts/2020-07-03-boa-release-09.md
@@ -4,9 +4,9 @@ title: "How Rust helps us move faster - v0.9"
 author: Boa Developers
 ---
 
-Hello World!   
+Hello World!
 
-Boa is an experimental Javascript lexer, parser and compiler written in Rust. Currently, it has support for some of the language. It can be embedded in Rust projets fairly easily and also used from the command line.   
+Boa is an experimental Javascript lexer, parser and compiler written in Rust. Currently, it has support for some of the language. It can be embedded in Rust projets fairly easily and also used from the command line.  
 Boa also exists to serve as a Rust implementation of the EcmaScript specification, there will be areas where we can utilise Rust and its fantastic ecosystem to make fast, concurrent and safe optimisations.
 
 Roughly every month to 6 weeks we have a new version of Boa. Today we're please to announce our latest release, version 0.9.  
@@ -46,15 +46,36 @@ In JavaScript internal metadata for objects are stored in `internal slots`. In B
 
 By changing how internal data is handled for some of our builtin objects and removing a whole bunch of redundent access checks, we managed to speed up the interpereter.
 
-we can see in the image before Boa spends a significant amount of time converting back and forth between Values and primitive values, set_value is high because they need to be comverted to RxHash maps before they can be manipulated
-[Before]
+Boa would spend a significant amount of time converting back and forth between JS Values and primitive values. We found a huge amount of time was spent in `Value::set_field` before any code had even been executed. `set_field` was slow due to the amount of updating of internal slots as part of setting up. Here you can see realm creation takes roughly 60ms.
 
-creating a fast path for many of these builtins gives is a huge speed up.
-[After]
+_We use [Crox](https://github.com/rust-lang/measureme/blob/master/crox/Readme.md) to convert our measureme data into a format Chrome's performance tab understands_
+
+![Before](../images/2020-07-03/before.png)
+
+creating a fast path for many of these builtins gives is a huge speed up.  
+Many builtIn objects keep the same spec-compliant metadata but held in an enum now.
+
+```rust
+/// Defines the different types of objects.
+#[derive(Debug, Trace, Finalize, Clone)]
+pub enum ObjectData {
+    Array,
+    BigInt(RcBigInt),
+    Boolean(bool),
+    Function(Function),
+    String(RcString),
+    Number(f64),
+    Symbol(RcSymbol),
+    Error,
+    Ordinary,
+}
+```
+
+![After](../images/2020-07-03/after.png)
 
 This gave us a 65% speed up and reduced startup time by well over half.
 
 ## Optimised Type Comparisons
 
-If you've ever called `typeof` in JavaScript, you get a string value descibing the primitive type of it's argument. Boa was doing the same thing internally for comparing (using the "get_type()" call), however getting the string value from each primitive then comparing them is not very performant.   
+If you've ever called `typeof` in JavaScript, you get a string value descibing the primitive type of it's argument. Boa was doing the same thing internally for comparing (using the "get_type()" call), however getting the string value from each primitive then comparing them is not very performant.  
 Now, thanks to @Lan2u we have a rust `Type` enum which makes comparing more efficient and on average brings another 8% performance boost.
