updating post and adjusting styles

--- a/_posts/2020-07-02-boa-release-09.md
+++ b/_posts/2020-07-02-boa-release-09.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "How Rust helps us move faster - v0.9"
+title: "Boa 0.9: measureme & optimisations"
 author: Boa Developers
 ---
 
@@ -50,7 +50,7 @@ Boa would spend a significant amount of time converting back and forth between J
 
 _We use [Crox](https://github.com/rust-lang/measureme/blob/master/crox/Readme.md) to convert our measureme data into a format Chrome's performance tab understands_
 
-![Before](../images/2020-07-03/before.png)
+![Before](/images/2020-07-03/before.png)
 
 creating a fast path for many of these builtins gives is a huge speed up.  
 Many builtIn objects keep the same spec-compliant metadata but held in an enum now.
@@ -71,7 +71,7 @@ pub enum ObjectData {
 }
 ```
 
-![After](../images/2020-07-03/after.png)
+![After](/images/2020-07-03/after.png)
 
 This gave us a 65% speed up and reduced startup time by well over half.
 
