--- a/_posts/2020-07-02-boa-release-09.md
+++ b/_posts/2020-07-02-boa-release-09.md
@@ -10,11 +10,11 @@ Boa is an experimental Javascript lexer, parser and compiler written in Rust. Cu
 Boa also exists to serve as a Rust implementation of the EcmaScript specification, there will be areas where we can utilise Rust and its fantastic ecosystem to make fast, concurrent and safe optimisations.
 
 Roughly every month to 6 weeks we have a new version of Boa. Today we're please to announce our latest release, version 0.9.  
-0.9 is by far the biggest release weve had since Boa began. You see the full changes from the [changelog](none yet). The milestone behind this version was further optimisation and an increase in new features. We can show you how we can identify areas that can be optimised.
+0.9 is by far the biggest release weve had since Boa began. You see the full changes from the [changelog](https://github.com/boa-dev/boa/blob/master/CHANGELOG.md#-090-2020-06-25---move-to-organisation-78-faster-execution-time). The milestone behind this version was further optimisation and an increase in new features. We can show you how we can identify areas that can be optimised.
 
 ## Better tooling for profiling
 
-Boa became the first Rust project to make use of [measureme](https://github.com/rust-lang/measureme), this was only used by the Rust team themselves to profile the compiler. Luckily the framework is in a good enough state to be used by other projects too, and in this release we gave it a try.  
+Boa became the first Rust project to make use of [measureme](https://github.com/rust-lang/measureme), a profiling tool built from the ground up for rust-lang. This was only used by the Rust team themselves to profile the compiler. Luckily the framework is in a good enough state to be used by other projects too, and in this release we gave it a try.  
 Measure me lets you profile various areas of your choosing, then you can generate a trace file which can be loaded into Chromium or various other tools for analysis.
 
 We took it for a spin (which you'll see in Object Specialization).
@@ -52,8 +52,9 @@ _We use [Crox](https://github.com/rust-lang/measureme/blob/master/crox/Readme.md
 
 ![Before](/images/2020-07-03/before.png)
 
-creating a fast path for many of these builtins gives is a huge speed up.  
-Many builtIn objects keep the same spec-compliant metadata but held in an enum now.
+We refactored many builtins to hold an `ObjectData` enum varient instead, some of which can hold a value for the type also.
+This can be used to both identify objects and to use their internal data.  
+Here is an example of our enum.
 
 ```rust
 /// Defines the different types of objects.
