--- a/_posts/2020-07-02-boa-release-09.md
+++ b/_posts/2020-07-02-boa-release-09.md
@@ -10,7 +10,7 @@ Boa is an experimental Javascript lexer, parser and compiler written in Rust. Cu
 Boa also exists to serve as a Rust implementation of the EcmaScript specification, there will be areas where we can utilise Rust and its fantastic ecosystem to make fast, concurrent and safe optimisations.
 
 Roughly every month to 6 weeks we have a new version of Boa. Today we're please to announce our latest release, version 0.9.  
-0.9 is by far the biggest release weve had since Boa began. You see the full changes from the [changelog](https://github.com/boa-dev/boa/blob/master/CHANGELOG.md#-090-2020-06-25---move-to-organisation-78-faster-execution-time). The milestone behind this version was further optimisation and an increase in new features. We can show you how we can identify areas that can be optimised.
+0.9 is by far the biggest release weve had since Boa began. You can find the full changes from the [changelog](https://github.com/boa-dev/boa/blob/master/CHANGELOG.md#-090-2020-06-25---move-to-organisation-78-faster-execution-time). The milestone behind this version was further optimisation and an increase in new features. We can show you how we can identify areas that can be optimised.
 
 ## Better tooling for profiling
 
@@ -37,12 +37,11 @@ Below is an example of our trace, this is using a measureme tool called `summari
 +----------------------------+-----------+-----------------+----------+------------+
 ```
 
-You can read more about Rust's usage of measureme [here](https://blog.rust-lang.org/inside-rust/2020/02/25/intro-rustc-self-profile.html).  
-You can also read more about Boa's usage of measureme [here](https://github.com/boa-dev/boa/blob/master/docs/profiling.md)
+You can read more about Rust's usage of measureme [here](https://blog.rust-lang.org/inside-rust/2020/02/25/intro-rustc-self-profile.html).
 
 ## Object Specialization
 
-In JavaScript internal metadata for objects are stored in `internal slots`. In Boa we stored internal slots as a hashmap tied to the object, then the values themselves were `JSValue`s. This meant we needed to constantly unwrap them into a rust primitive to access the data. Secondly we were restricted as to what type of data we could put in internal slots. For example, lets say we want to implement [`Set`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Set) by using the native [`HashSet`](https://doc.rust-lang.org/std/collections/struct.HashSet.html) as a backing store, this would not be possible.
+In JavaScript internal metadata for objects are stored in `internal slots`. In Boa we stored internal slots as a hashmap tied to the object, with the keys being strings and the values as [`JSValues`](https://github.com/boa-dev/boa/blob/73f65f7800917c92f86134eaa21751c1ca93d986/boa/src/builtins/value/mod.rs#L57-L78). This meant we needed to constantly unwrap them into a rust primitive to access the data. Secondly we were restricted as to what type of data we could put in internal slots. For example, lets say we want to implement [`Set`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Set) by using the native [`HashSet`](https://doc.rust-lang.org/std/collections/struct.HashSet.html) as a backing store, this would not be possible.
 
 By changing how internal data is handled for some of our builtin objects and removing a whole bunch of redundent access checks, we managed to speed up the interpereter.
 
@@ -74,9 +73,23 @@ pub enum ObjectData {
 
 ![After](/images/2020-07-03/after.png)
 
-This gave us a 65% speed up and reduced startup time by well over half.
+This gave us a 70% speed up and reduced startup time by well over half. The `realm::create` function now runs in 13ms instead of 60ms.
 
 ## Optimised Type Comparisons
 
 If you've ever called `typeof` in JavaScript, you get a string value descibing the primitive type of it's argument. Boa was doing the same thing internally for comparing (using the "get_type()" call), however getting the string value from each primitive then comparing them is not very performant.  
-Now, thanks to @Lan2u we have a rust `Type` enum which makes comparing more efficient and on average brings another 8% performance boost.
+Now, thanks to @Lan2u we have a rust [`Type`](https://github.com/boa-dev/boa/blob/8f8498eac17164c8de2f599bd0b7ba2e8053ec30/boa/src/builtins/value/val_type.rs#L4-L17) enum which makes comparing more efficient and on average brings another 8% performance boost.
+
+## Parser rebuild, better code organisation
+
+Boa was predominantly 3 files. The lexer, parser and interpreter.  
+The naive implementation of the parser was a [single file](https://github.com/boa-dev/boa/blob/c23a7b1f4ac57af6c5f0b9f6c98fbbed7a14c98f/src/lib/syntax/parser.rs) which had a long match expression for tokens and went through every token figuring out what to do. This did the job but became unmaintainable when adding new features.  
+We have been breaking the parser up into separate modules, which represent various expressions and statements that conform to the specification.
+
+Each of these modules implement the [`tokenParser` trait](https://github.com/boa-dev/boa/blob/32b0741cc85526b0cdab5509ddc538567129a05b/boa/src/syntax/parser/mod.rs#L15-L39). This allows new parsers to be added for various parts of the language.
+
+An example is the [`UnaryExpression`](https://github.com/boa-dev/boa/blob/4beadfc9adf91f9b0fb467cc9fe57549699722e8/boa/src/syntax/parser/expression/unary.rs)
+
+After all the fixes in this release we've seen on average a 70% improvement, we still have areas where we plan to improve. We are currently rebuilding the lexer so it is more broken up like the parser and interpreter, we will blog about this soon in future.
+
+We hope to add more detail in future on how some parts of Boa work, make sure you stay tuned for any future posts!
