--- a/_posts/2020-09-30-boa-release-10.md
+++ b/_posts/2020-09-30-boa-release-10.md
@@ -4,6 +4,13 @@ title: "Boa release v0.10"
 author: Boa Developers
 ---
 
+Boa is an experimental Javascript lexer, parser and compiler written in Rust. It has support for some of the language, can be embedded in Rust projects fairly easily and also used from the command line.
+Boa also exists to serve as a Rust implementation of the EcmaScript specification, there will be areas where we can utilise Rust and its fantastic ecosystem to make a fast, concurrent and safe engine.
+
+We have a long way to go, however v0.10 has been the biggest release to date, with over 133 issues closed.
+
+We have some highlights, but if you prefer to read the full changelog, you can do that here. @todo add link
+
 ## Test262
 
 One question we've been asked for a long time is "how conformant are you to the spec?". It's been tough to answer as we've been unable to run against the official test suite.
