--- a/_posts/2020-09-30-boa-release-10.md
+++ b/_posts/2020-09-30-boa-release-10.md
@@ -22,6 +22,6 @@ This is a new crate inside the Boa repository that can parse through all of the 
 
 ![image](/images/2020-09-30/test262-screenshot.png)
 
-Today Boa has 17.81% conformity to the specification. We'll be keeping an eye on this number over the releases.
+Today Boa has <span class="x x-first x-last">18.27</span>% conformity to the specification. We'll be keeping an eye on this number over the releases.
 
 These are run via Github Actions against PRs and for our master branch so that we can keep track of where we are and if there are regressions.
