Fixed typo (well know -> well known)

--- a/_posts/2020-10-02-boa-release-10.md
+++ b/_posts/2020-10-02-boa-release-10.md
@@ -28,7 +28,7 @@ These are run via Github Actions against PRs and for our master branch so that w
 
 ## Built-ins
 
-We've added support for [`Date`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date), [`Map`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map) and [well-know symbols](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Symbol). Supporting Well-known symbols unblocks a lot of work around adding `@@iterators` to some of our global objects which is coming up in the next release.  
+We've added support for [`Date`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date), [`Map`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map) and [well-known symbols](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Symbol). Supporting Well-known symbols unblocks a lot of work around adding `@@iterators` to some of our global objects which is coming up in the next release.  
 Both `Math` and `Number` have had their remaining methods implemented.
 
 ## Lexer
