add conformance link

--- a/_posts/2021-01-10-boa-release-11.md
+++ b/_posts/2021-01-10-boa-release-11.md
@@ -42,4 +42,6 @@ Previously the lexer iterated over Unicode chars (u32 code points), this wasn't 
 
 Most [changes](https://github.com/boa-dev/boa/pull/915/files) included switching to the Rust `b'` prefix for characters which tells rust to treat the value as a byte literal.
 
+## Thank You
+
 Everything in this release has been such a huge effort, we thank everyone who contributed, whether it was features, fixes or raising bugs.
