--- a/_posts/2021-01-10-boa-release-11.md
+++ b/_posts/2021-01-10-boa-release-11.md
@@ -25,7 +25,7 @@ For live tracking of conformance tests you can check [here](https://boa-dev.gith
 
 ## Regress
 
-In this release Boa switched from `regex` to the [`regress`](https://github.com/ridiculousfish/regress) crate for regular expressions. Regress is a project aiming to implement ECMAScript compliant regular expressions and Boa makes use (and contributes back to) that. Shout out to [ridiculousfish](https://github.com/ridiculousfish) who maintains the project.
+In this release Boa switched from `regex` to the [`regress`](https://github.com/ridiculousfish/regress) crate for regular expressions. Regress is a crate aiming to implement ECMAScript compliant regular expressions and Boa makes use (and contributes back to) that. Shout out to [ridiculousfish](https://github.com/ridiculousfish) who maintains the project.
 
 While Regress is not 100% spec compliant this is something which is being worked on, also the switch (with some other refactoring) gave us quite a performance boost in our [benchmarks](https://boa-dev.github.io/boa/dev/bench/) we're seeing almost 6X faster execution.
 
@@ -38,9 +38,21 @@ The above image shows a big drop in the middle of the graph, above `fb1b8d5` is 
 
 ## Iterating over bytes
 
-Previously the lexer iterated over Unicode chars (u32 code points), this wasn't strictly neccesary for Boa and we have instead changed the lexer to work over bytes (u8). This is standard practise amongs lexical analyzers and even browsers read source code byte-by-byte, using the rules of the language's syntax to convert the source text into tokens.
+Previously the lexer iterated over Unicode chars (u32 code points), this wasn't strictly neccesary for Boa and we have instead changed the lexer to work over bytes (u8). Iterating over bytes rather than chars is inherently much faster, non-ascii UTF8 bytes are all >=128, and we might only really care about those being correct when parsing idents. This is standard practise amongs lexical analyzers and even browsers read source code byte-by-byte, using the rules of the language's syntax to convert the source text into tokens.
 
-Most [changes](https://github.com/boa-dev/boa/pull/915/files) included switching to the Rust `b'` prefix for characters which tells rust to treat the value as a byte literal.
+This was worked on by @jevancc and his [changes](https://github.com/boa-dev/boa/pull/915/files) have improved performance overall.
+
+## Generating bytecode
+
+Today Boa walks the tree of the AST, although easy to implement it's not ideal for performance.  
+We are loooking to do code generation which can then be interpreted. This gradual process may happen over many releases until at some point we can switch implementations under the hood. Our steps are:
+
+- ~~Experiment with VM Path on isolated branch~~ done
+- Experiment with generating more simpler instructions
+- Build up parity with current implementation
+- Run test suite over VM path including conformance tests
+- Switch over once performance is steady
+- Optimize code generation and intreperter
 
 ## Thank You
 
