--- a/_posts/2021-01-10-boa-release-11.md
+++ b/_posts/2021-01-10-boa-release-11.md
@@ -4,14 +4,11 @@ title: "Boa release v0.11"
 author: Boa Developers
 ---
 
-Happy New Year!
-
-Boa has reached a new release. v0.11, our biggest release yet.
-This release has had [commits] and [num contributors], the engine has been faster and more compliant since v0.10. What we have here are some of the highlights but please see the [changelog link] for more information.
+Boa has reached a new release. v0.11, our biggest one yet. Since v0.10 we've closed 77 issues, merged 129 pull requests. The engine has been faster and more compliant to the spec. Below are some of the highlights but please see the [changelog link] for more information.
 
 ## Test 262
 
-Test262 is the implementation conformance test suite maintained by TC39. It's used by nearly all engines to measure how conformant they are to the specification. Boa pulls the tests in-tree and runs against PRs and on a nightly basis. Test262 doesn't sit still, changes and features get added to te test suite also updates, since the last release we've updated our reference to make sure we're running against the latest spec. You can find out more about Test262 [here](https://github.com/tc39/test262)
+Test262 is the implementation conformance test suite maintained by TC39. It's used by nearly all engines to measure how conformant they are to the specification. Boa pulls the tests in-tree and runs against PRs and on a nightly basis. Test262 doesn't sit still, so since the last release we've updated our reference to make sure we're running against the latest spec. You can find more about Test262 [here](https://github.com/tc39/test262).
 
 Since v0.10 we have almost doubled on spec conformance, and reduced panics from hundreds to less than 50. A year ago Boa didn't even track itself against Test262 so it was difficult to know how compliant we were to the spec, today not only do we track all changes against Test262 but we can see progress on a PR to PR basis.
 
@@ -25,9 +22,9 @@ For live tracking of conformance tests you can check [here](https://boa-dev.gith
 
 ## Regress
 
-In this release Boa switched from `regex` to the [`regress`](https://github.com/ridiculousfish/regress) crate for regular expressions. Regress is a crate aiming to implement ECMAScript compliant regular expressions and Boa makes use (and contributes back to) that. Shout out to [ridiculousfish](https://github.com/ridiculousfish) who maintains the project.
+In this release Boa switched from its own implementation (wrapping `regex`) to the [`regress`](https://github.com/ridiculousfish/regress) engine for regular expressions. Regress is a crate aiming to implement ECMAScript compliant regular expressions and Boa makes use (and contributes back to) that.
 
-While Regress is not 100% spec compliant this is something which is being worked on, also the switch (with some other refactoring) gave us quite a performance boost in our [benchmarks](https://boa-dev.github.io/boa/dev/bench/) we're seeing almost 6X faster execution.
+While Regress is not 100% spec compliant this is something which is being worked on, also the switch gave us quite a performance boost in our [benchmarks](https://boa-dev.github.io/boa/dev/bench/) we're seeing almost 6X faster execution.
 
 <picture>
     <source srcset="/images/2021-09-11/regex-bench-dark.png" media="(prefers-color-scheme: dark)">
@@ -42,13 +39,23 @@ Previously the lexer iterated over Unicode chars (u32 code points), this wasn't 
 
 This was worked on by @jevancc and his [changes](https://github.com/boa-dev/boa/pull/915/files) have improved performance overall.
 
+## Embedding examples
+
+We are still working on what the public API should look like, some of these decisions are driven by feedback and the constant changing way which Boa works.  
+Not only you can run Boa against javascript today you can also embed your own objects and classes into the engine before it's ran.
+
+We've offered an [example](https://github.com/boa-dev/boa/blob/master/boa/examples/classes.rs) to show how a class can be constructed in Rust then added to the environment before executing your scripts.
+This should offer a great insight into how you can interop Rust with JavaScript by using Boa.
+
+If there are any examples you would like added, please raise an issue on the main repository.
+
 ## Generating bytecode
 
 Today Boa walks the tree of the AST, although easy to implement it's not ideal for performance.  
 We are loooking to do code generation which can then be interpreted. This gradual process may happen over many releases until at some point we can switch implementations under the hood. Our steps are:
 
-- ~~Experiment with VM Path on isolated branch~~ done
-- Experiment with generating more simpler instructions
+- ~~Experiment with VM Path on isolated branch~~
+- ~~Experiment with generating more simpler instructions~~
 - Build up parity with current implementation
 - Run test suite over VM path including conformance tests
 - Switch over once performance is steady
