--- a/_posts/2021-01-14-boa-release-11.md
+++ b/_posts/2021-01-14-boa-release-11.md
@@ -14,6 +14,13 @@ Since v0.10 we have almost doubled on spec conformance, and reduced panics from 
 
 For live tracking of conformance tests you can check [here](https://boa-dev.github.io/boa/test262/). Below is a snapshot of the previous version and today.
 
+<picture>
+    <source srcset="/images/2021-01-14/conformance_dark.png" media="(prefers-color-scheme: dark)">
+    <img src="/images/2021-01-14/conformance_white.png">
+</picture>
+
+Previously many tests failed to run, due to esoteric language uses or the test-runner was not mature enough. Those issues have been fixed and our tests jumped from 38k to 78K which is why the graph flips up above.
+
 <div class="row" style="display: flex; justify-content: space-around;">
         <section class="col-md-4" style="" id="version-latest"><div class="card"><div class="card-body"><h3>v0.10:</h3><ul class="list-group list-group-flush"><li class="list-group-item">Total tests: <span class="total-tests">38,706</span></li><li class="list-group-item">Passed tests: <span class="passed-tests">6,960</span></li><li class="list-group-item">Ignored tests: <span class="ignored-tests">5,748</span></li><li class="list-group-item">Failed tests: <span class="failed-tests">25,998</span></li><li class="list-group-item">Conformance: <b>17.98%</b></li></ul><div class="info-link"><a class="card-link" href="#"><span class="info-link"></span></a></div></div></div></section>
         <section class="col-md-4" style="" id="master-latest"><div class="card"><div class="card-body"><h3>v0.11:</h3><ul class="list-group list-group-flush"><li class="list-group-item">Total tests: <span class="total-tests">78,497</span></li><li class="list-group-item">Passed tests: <span class="passed-tests">24,550</span></li><li class="list-group-item">Ignored tests: <span class="ignored-tests">15,585</span></li><li class="list-group-item">Failed tests: <span class="failed-tests">38,362 (24 ⚠)</span></li><li class="list-group-item">Conformance: <b>31.28%</b></li></ul><div class="info-link"><a class="card-link" href="#"><span class="info-link"></span></a></div></div></div></section>
@@ -27,8 +34,8 @@ In this release Boa switched from its own implementation (wrapping `regex`) to t
 While Regress is not 100% spec compliant this is something which is being worked on, also the switch gave us quite a performance boost in our [benchmarks](https://boa-dev.github.io/boa/dev/bench/) we're seeing almost 6X faster execution.
 
 <picture>
-    <source srcset="/images/2021-09-11/regex-bench-dark.png" media="(prefers-color-scheme: dark)">
-    <img src="/images/2021-09-11/regex-bench-white.png">
+    <source srcset="/images/2021-01-14/regex-bench-dark.png" media="(prefers-color-scheme: dark)">
+    <img src="/images/2021-01-14/regex-bench-white.png">
 </picture>
 
 The above image shows a big drop in the middle of the graph, above `fb1b8d5` is where we switched over. Conformance went from 19.01% to 18.99% and introduced some panics, however many of those have since been fixed.
