Fixed spelling mistake in boa release post

--- a/_posts/2021-01-14-boa-release-11.md
+++ b/_posts/2021-01-14-boa-release-11.md
@@ -70,7 +70,7 @@ If there are any examples you would like added, please raise an issue on the mai
 ## Generating bytecode
 
 Today Boa walks the tree of the AST, although easy to implement it's not ideal for performance.  
-We are loooking to do code generation which can then be interpreted. This gradual process may happen over many releases until at some point we can switch implementations under the hood. Our steps are:
+We are looking to do code generation which can then be interpreted. This gradual process may happen over many releases until at some point we can switch implementations under the hood. Our steps are:
 
 - ~~Experiment with VM Path on isolated branch~~
 - ~~Experiment with generating more simpler instructions~~
