--- a/_posts/2021-06-07-boa-release-12.md
+++ b/_posts/2021-06-07-boa-release-12.md
@@ -6,7 +6,7 @@ author: Boa Developers
 
 Boa v0.12 is here! Boa is a JavaScript parser, compiler and executor written in the Rust programming language. It makes it easy to embed a JS engine in your projects, and you can even use it from webassembly. See the [About](/about) page for more info. 
 
-We currently support part of the language. In this release, our conformance has grown to 33.87% of the official ECMAScript Test Suite (Test262). In this release, we have closed 18 issues and merged 69 pull requests.
+We currently support part of the language. In this release, our conformance has grown to 33.97% of the official ECMAScript Test Suite (Test262). In this release, we have closed 19 issues and merged 69 pull requests. You can check the full list of changes [here](https://github.com/boa-dev/boa/blob/v0.12/CHANGELOG.md).
 
 Let's dive into the most relevant changes of this release.
 
@@ -16,7 +16,7 @@ Boa now doesn't panic in any of the Test262 tests. This is a huge milestone, sin
 
 ## Conformance increase
 
-In version 0.11 we were passing 31.59% of the Test262 suite. In this version, we have increased that coverage to **33.87%**. The increase might not seem much, but we now pass 1,924 new tests.
+In version 0.11 we were passing 31.59% of the Test262 suite. In this version, we have increased that coverage to **33.97%**. The increase might not seem much, but we now pass 1,924 new tests.
 
 Our conformance tester has also been improved, and thanks to the new APIs available in the engine, we were able to add complex functionality such as "realm" creation, cross-real symbols and overall, the inclusion of a partially complete `$262` object, ready for some testing.
 
