update readme and post

--- a/_posts/2021-09-26-boa-release-13.md
+++ b/_posts/2021-09-26-boa-release-13.md
@@ -4,15 +4,13 @@ title: "Boa release v0.13"
 author: Boa Developers
 ---
 
-Boa has reached a new release. v0.13, our biggest one yet!
+Boa v0.13 is here! Boa is a JavaScript parser, compiler and executor written in the Rust programming language. It makes it easy to embed a JS engine in your projects, and you can even use it from webassembly. See the [About](/about) page for more info.
 
-Since v0.12 we've closed ?? issues and merged ?? pull requests. The engine has been faster and more compliant to the spec. Below are some of the highlights but please see the [changelog link] for more information.
-
-What is Boa? See the [About](/about) page for more info.
+We currently support part of the language. In this release, our conformance has grown to 41.97% of the official ECMAScript Test Suite (Test262). In this release, we have closed ?? issues and merged ?? pull requests. You can check the full list of changes [here](https://github.com/boa-dev/boa/blob/v0.13/CHANGELOG.md).
 
 ## New Features
 
-This release brings some new features, such as support for the [Relative Indexing Method](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/at) (better known as `at()`). Thanks to @neeldug for adding this. Other additions include `replaceAll()`, `Object.values()`, `Object.preventExtensions()`, `splice()`, `sort()` and more.
+This release brings some new features, such as support for the [Relative Indexing Method](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/at) (better known as `at()`). Thanks to @neeldug for adding this. Other additions include `replaceAll()`, `Object.values()`, `Object.preventExtensions()`, `splice()`, `sort()`, spreading objects and more.
 
 ## Test 262
 
@@ -28,7 +26,7 @@ As we work on Boa Rust is changing underneath us. This means we need to make sur
 
 ## Keeping things in order
 
-Previously object properties were stored using [`FXHash0`](https://crates.io/crates/fxhash). Despite being very fast it was not guarunteeing any order. Properties need to retain the same order they were entered. In order to achieve this we switched over to [IndexMap](https://docs.rs/indexmap/1.7.0/indexmap/). Traits in Rust make this easy as IndexMap was designed to be a drop-in replacement for other HashMap implementations by following the same Trait. Performance losses were minimal on some benchmarks and we actually made some gains in others.
+Previously object properties were stored using [`FXHash`](https://crates.io/crates/fxhash). Despite being very fast it was not guarunteeing any order. Properties need to retain the same order they were entered. In order to achieve this we switched over to [IndexMap](https://docs.rs/indexmap/1.7.0/indexmap/). Traits in Rust make this easy as IndexMap was designed to be a drop-in replacement for other HashMap implementations by following the same Trait. Performance losses were minimal on some benchmarks and we actually made some gains in others.
 
 ## Re-design VM for better space efficiency
 
