--- a/_posts/2021-09-26-boa-release-13.md
+++ b/_posts/2021-09-26-boa-release-13.md
@@ -26,7 +26,7 @@ As we work on Boa Rust is changing underneath us. This means we need to make sur
 
 ## Keeping things in order
 
-Previously object properties were stored using [`FXHash`](https://crates.io/crates/fxhash). Despite being very fast it was not guarunteeing any order. Properties need to retain the same order they were entered. In order to achieve this we switched over to [IndexMap](https://docs.rs/indexmap/1.7.0/indexmap/). Traits in Rust make this easy as IndexMap was designed to be a drop-in replacement for other HashMap implementations by following the same Trait. Performance losses were minimal on some benchmarks and we actually made some gains in others.
+Previously object properties were stored using [`FXHash`](https://crates.io/crates/fxhash). Despite being very fast it was not guarunteeing any order. Properties need to retain the same order they were entered. In order to achieve this we switched over to [IndexMap](https://docs.rs/indexmap/1.7.0/indexmap/). Traits in Rust make this easy as IndexMap was designed to be a drop-in replacement for other HashMap implementations by following the same Trait. Performance losses were minimal on some benchmarks and we actually made some gains in others. Thanks to @raskad their work on this
 
 ## Re-design VM for better space efficiency
 
